2009-04-25  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/mail.c: Ignore the return value of puts().
	* libmisc/mail.c: Prefer snprintf to sprintf, even if a small
	context indicates no issues.

2009-04-22  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/commonio.c, lib/commonio.h, lib/groupio.c, lib/groupio.h,
	lib/pwio.c, lib/pwio.h, lib/shadowio.c, lib/shadowio.h: Added
	splint annotations. The *_locate() and *_next() functions
	currently return an observer. As the structure are often modified
	by the caller, it could maybe be changed to exposed later. (and
	non-const)

2009-04-22  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/pwauth.c: Use a boolean for wipe_clear_pass and use_skey.
	* lib/pwauth.c: Added splint annotations.
	* lib/pwauth.c: Added brackets and parenthesis.
	* lib/pwauth.c: Avoid assignments in comparisons.
	* lib/pwauth.c: Avoid implicit conversion of pointers or
	characters to booleans.

2009-04-22  Nicolas François  <nicolas.francois@centraliens.net>

	* src/groupmod.c: Cast ID to ulongs and use ulong formats for IDs.

2009-04-22  Nicolas François  <nicolas.francois@centraliens.net>

	* src/newgrp.c: Added splint annotations.
	* src/newgrp.c: audit_buf is only used in newgrp. Make it static.
	* src/newgrp.c: Ignore the return value of fputs().
	* src/newgrp.c: Use exit(EXIT_FAILURE) instead of exit(1).

2009-04-22  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/pwdcheck.c (passwd_check): The progname is not used.
	* libmisc/pwdcheck.c: Ignore the return value of sleep().
	* libmisc/pwdcheck.c: Use exit(EXIT_FAILURE) instead of exit(1).

2009-04-22  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/setupenv.c: Avoid assignments in comparisons.
	* libmisc/setupenv.c: Added brackets and parenthesis.
	* libmisc/setupenv.c: Ignore the return value of fclose (file
	opened read-only)
	* libmisc/setupenv.c: Ignore the return value of puts().